nexus_repository_oss/minikube/ns.nexus_repository.yaml
###############################################################################
##        Name: ns.nexus_repository.yaml                                      #
##        Date: 11/04/2021                                                    #
## Description: File to create a namespace for:                               #
##              -> app: nexus_repository                                      #
##              -> project: nexus_repository_oss                              #
##----------------------------------------------------------------------------#
##      Editor: José Manuel Plana Santos                                      #
##     Contact: dev.josemanuelps@gmail.com                                    #
###############################################################################



---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-nexus
  labels:
    app: nexus_repository
    project: nexus_repository_oss
...
