nexus_repository_oss/minikube/deploy.nexus_repository.yaml
###############################################################################
##        Name: deploy.nexus_repository.yaml                                  #
##        Date: 25/07/2021                                                    #
## Description: File to create a deployment for:                              #
##              -> app: nexus_repository                                      #
##              -> image: sonatype_nexus3_-_3.32.0                            #
##              -> project: nexus_repository_oss                              #
##----------------------------------------------------------------------------#
##       Image: -> sonatype_nexus3_-_3.32.0                                   #
##----------------------------------------------------------------------------#
##      Editor: José Manuel Plana Santos                                      #
##     Contact: dev.josemanuelps@gmail.com                                    #
###############################################################################



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nexus
  namespace: ns-nexus
  labels:
    app: nexus_repository
    image: sonatype_nexus3_-_3.32.0 
    project: nexus_repository_oss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus_repository
      image: sonatype_nexus3_-_3.32.0 
      project: nexus_repository_oss
  template:
    metadata:
      labels:
        app: nexus_repository
        image: sonatype_nexus3_-_3.32.0 
        project: nexus_repository_oss
    spec:
      containers:
      - name: cont-nexus
        image: sonatype/nexus3:3.32.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        - containerPort: 5000
        volumeMounts:
          - name: nexus-emptydir
            mountPath: /nexus-data
        resources: {}
      volumes:
        - name: nexus-emptydir
          emptyDir: {}
...
