nexus_repository_oss/minikube/svc.nexus_repository.yaml
###############################################################################
##        Name: svc.nexus_repository.yaml                                     #
##        Date: 11/04/2021                                                    #
## Description: File to create a service for:                                 #
##              -> app: nexus_repository                                      #
##              -> project: nexus_repository_oss                              #
##----------------------------------------------------------------------------#
##       Ports: -> 80 === 8081                                                #
##              -> 5000 === 5000                                              #
##----------------------------------------------------------------------------#
##      Editor: José Manuel Plana Santos                                      #
##     Contact: dev.josemanuelps@gmail.com                                    #
###############################################################################



---
apiVersion: v1
kind: Service
metadata:
  name: svc-nexus
  namespace: ns-nexus
  labels:
    app: nexus_repository
    project: nexus_repository_oss
spec:
  type: NodePort
  selector:
    app: nexus_repository
    project: nexus_repository_oss
  ports:
    - name: http
      port: 80
      targetPort: 8081
      protocol: TCP
    - name: docker
      port: 5000
      nodePort: 30500
      protocol: TCP
...
