nexus_repository_oss/minikube/ingress.nexus_repository.yaml
###############################################################################
##        Name: ingress.nexus_repository.yaml                                 #
##        Date: 11/04/2021                                                    #
## Description: File to create a service for:                                 #
##              -> app: nexus_repository                                      #
##              -> project: nexus_repository_oss                              #
##----------------------------------------------------------------------------#
##      Editor: José Manuel Plana Santos                                      #
##     Contact: dev.josemanuelps@gmail.com                                    #
###############################################################################



---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nexus
  namespace: ns-nexus
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100m
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: nexus_repository
    project: nexus_repository_oss
spec:
  rules:
  - host: "nexus.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: svc-nexus
            port:
              number: 80
  - host: "docker.local"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: svc-nexus
            port:
              number: 5000
...
